# grimsprout

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tz.md
.github/: dependabot.yml
.github/agents/: ba.agent.md  qa.agent.md
.github/scripts/: drift-check.sh
.github/workflows/: auto-merge-dependabot.yml  ci.yml
config/: config.example.yaml  config.yaml
config/prompts/: changelog_style.md  intent_schema.json  system_assistant.md  system_classifier.md  system_undertaker.md
deploy/: Dockerfile  docker-compose.prod.yaml  docker-compose.yaml  lxc-bootstrap.md  server-setup.sh
docs/: plan.md
docs/adr/: 0001-aiogram-3x.md  0002-mongodb-for-state.md  0003-md-as-source-of-truth.md  0004-ollama-json-intent.md  0005-future-mcp-export.md  0006-bot-work-branch.md  0007-tool-calling.md
docs/spec/: 01-overview.md  02-data-model.md  03-bot-flows.md  04-llm-contract.md  05-git-flow.md  06-scheduling.md  07-roles-and-auth.md  08-config.md
docs/tasks/: README.md  infra-001-cd-ghcr-watchtower.md  phase3-001-ollama-client.md  phase3-002-llm-router.md  phase3-003-action-dispatch.md  phase3-004-llm-query-action.md  phase3-005-llm-confirm-gate.md  phase3-006-llm-confidence-threshold.md  phase4-001-new-card-command.md  phase4-002-plant-info-command.md  phase4-003-edit-card-command.md  phase4-004-llm-perf-stats.md  phase4-005-edge-cases.md  phase4-006-grimsprout-style.md  phase45-001-tool-calling-migration.md  phase5-001-gemini-payload-intake.md  phase5-002-apply-gemini-changes.md  phase6-001-scheduler-service.md  phase6-002-schedule-commands.md  phase7-001-photo-analyzer.md
src/grimsprout/: __init__.py  __main__.py  config.py
tests/: conftest.py
tests/integration/: test_audit_repo.py  test_db_indexes.py  test_sessions_repo.py  test_users_repo.py
tests/unit/: test_agent.py  (+12 more)
(+50 files in other folders)
